<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.edu.utng.mmacias.calculadoraapp.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_num1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_num1"
        android:textSize="25dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_num2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_num2"
        android:textSize="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_Resultado"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_resultado"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TipoCalculadora"
        android:textSize="25dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/TipoCalculadora"
        android:id="@+id/cmb_tipoCalculadora"
        ></Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_sumar"
            android:id="@+id/btn_sumar"
            />
        <Button

            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_Restar"
            android:id="@+id/btn_restar" />
        <Button

            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_Factorial"
            android:id="@+id/btn_factorial" />
        <Button

            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_Limpiar"
            android:id="@+id/btn_limpiar" />
</LinearLayout>
</LinearLayout>